# turtlebot_lab

./: map.pgm  map.yaml  real_robot.pgm  real_robot.yaml
turtlebot_example/: CMakeLists.txt  package.xml
turtlebot_example/launch/: turtlebot_gazebo.launch
turtlebot_example/src/: turtlebot_example_lab2.cpp  turtlebot_example_node.cpp  turtlebot_square.cpp
turtlebot_example_python/random_path/: CMakeLists.txt  package.xml
turtlebot_example_python/random_path/nodes/: random_path.py
turtlebot_lab2_python/turtlebot/: CMakeLists.txt  package.xml  setup.py
turtlebot_lab2_python/turtlebot/launch/: launch_ekf.launch  launch_occupancy_grid.launch
turtlebot_lab2_python/turtlebot/nodes/: extended_kf.py  occupancy_grid.py  turtlebot
turtlebot_lab2_python/turtlebot/src/curves/: __init__.py  curves.py
turtlebot_lab2_python/turtlebot/src/ellipse/: __init__.py  ellipse.py
turtlebot_pos_client/: CMakeLists.txt  package.xml
turtlebot_pos_client/launch/: mcptam.launch  turtlebot_pos_server.launch
turtlebot_pos_client/msg/: TagDetectionServer.msg
turtlebot_pos_client/src/: turtlebot_pos_client_node.cpp  turtlebot_pos_client_node.cpp~
